--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                 required.</p>
               <ul class="list-inline d-flex mb-4 -mx-2">
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">html</p>
+                  <span class="badge bg-light text-dark">html</span>
                 </li>
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">css</p>
+                  <span class="badge bg-light text-dark">css</span>
                 </li>
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">javaScript</p>
+                  <span class="badge bg-light text-dark">javaScript</span>
                 </li>
               </ul>
               <button type="button" class="btn btn-outline-primary btn-lg">See Project</button>
@@ -147,13 +147,13 @@
                 required.</p>
               <ul class="list-inline d-flex mb-4 -mx-2">
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">html</p>
+                  <span class="badge bg-light text-dark">html</span>
                 </li>
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">css</p>
+                  <span class="badge bg-light text-dark">css</span>
                 </li>
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">javaScript</p>
+                  <span class="badge bg-light text-dark">javaScript</span>
                 </li>
               </ul>
               <button type="button" class="btn btn-outline-primary btn-lg">See Project</button>
@@ -191,13 +191,13 @@
                 required.</p>
               <ul class="list-inline d-flex mb-4 -mx-2">
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">html</p>
+                  <span class="badge bg-light text-dark">html</span>
                 </li>
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">css</p>
+                  <span class="badge bg-light text-dark">css</span>
                 </li>
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">javaScript</p>
+                  <span class="badge bg-light text-dark">javaScript</span>
                 </li>
               </ul>
               <button type="button" class="btn btn-outline-primary btn-lg">See Project</button>
@@ -229,14 +229,13 @@
                 required.</p>
               <ul class="list-inline d-flex mb-4 -mx-2">
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">html</p>
+                  <span class="badge bg-light text-dark">html</span>
                 </li>
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">css</p>
+                  <span class="badge bg-light text-dark">css</span>
                 </li>
                 <li class="px-2">
-                  <p class="px-2 py-1 rounded-3 bg-secondary text-white">javaScript</p>
-                </li>
+                  <span class="badge bg-light text-dark">javaScript</span>
               </ul>
               <button type="button" class="btn btn-outline-primary btn-lg">See Project</button>
             </div>
@@ -367,15 +366,15 @@
             project that needs coding. I’d love to help with it </p>
           <form action="https://formspree.io/f/mjvjzbal" method="POST" class="col-10">
             <ul class="list-inline col-md-12">
-              <li class="form-field">
-                <input placeholder="Full name" class="input" type="text" minlength="1" maxlength="30" name="name"
+              <li class="mb-3">
+                <input placeholder="Full name" class="form-control" type="text" minlength="1" maxlength="30" name="name"
                   required>
               </li>
-              <li class="form-field">
-                <input placeholder="Email" class="input" type="email" name="email" required>
+              <li class="mb-3">
+                <input placeholder="Email" class="form-control" type="email" name="email" required>
               </li>
-              <li class="form-field">
-                <textarea placeholder="Write your message here" class="text-area" name="message" required rows="10"
+              <li class="mb-3">
+                <textarea placeholder="Write your message here"  class="form-control" name="message" required rows="10"
                   maxlength="500"></textarea>
               </li>
               <li class="text-center">
