--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="card mb-5 p-3">
         <div class="row g-0">
           <div class="col-md-6">
-            <img src="./assets/work1.png" class="img-fluid rounded-start" alt="..." style="width: 100%; height: 448px;">
+            <img src="./assets/work1.png" class="img-fluid rounded-start work-image" alt="Tonic">
           </div>
           <div class="col-md-6">
             <div class="card-body p-5">
@@ -160,14 +160,14 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/work2.png" class="img-fluid rounded-start" alt="..." style="width: 100%; height: 448px;">
+            <img src="./assets/work2.png" class="img-fluid rounded-start work-image" alt="Tonic" />
           </div>
         </div>
       </div>
       <div class="card mb-5 p-3">
         <div class="row g-0">
           <div class="col-md-6">
-            <img src="./assets/work3.png" class="img-fluid rounded-start" alt="..." style="width: 100%; height: 448px;">
+            <img src="./assets/work3.png" class="img-fluid rounded-start work-image" alt="Tonic" />
           </div>
           <div class="col-md-6">
             <div class="card-body p-5">
@@ -241,7 +241,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/work4.png" class="img-fluid rounded-start" alt="..." style="width: 100%; height: 448px;">
+            <img src="./assets/work4.png" class="img-fluid rounded-start work-image" alt="Tonic" />
           </div>
         </div>
       </div>
@@ -374,7 +374,7 @@
                 <input placeholder="Email" class="form-control" type="email" name="email" required>
               </li>
               <li class="mb-3">
-                <textarea placeholder="Write your message here"  class="form-control" name="message" required rows="10"
+                <textarea placeholder="Write your message here" class="form-control" name="message" required rows="10"
                   maxlength="500"></textarea>
               </li>
               <li class="text-center">
